--- a/C121.ipynb
+++ b/C121.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d2892e2a",
+   "id": "696b8a62",
    "metadata": {},
    "source": [
-    "# C1.2.1"
+    "# 1.2.1 Getting Started with Images"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4cd8a052",
+   "id": "0c866388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0f7e7915",
+   "id": "a8e132ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "01950982",
+   "id": "f82ec02a",
    "metadata": {},
    "outputs": [
     {
