--- a/tutorial5.ipynb
+++ b/tutorial5.ipynb
@@ -5,7 +5,7 @@
    "id": "a92533aa",
    "metadata": {},
    "source": [
-    "Control Flow"
+    "# Control Flow"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
