--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "714085d8",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "4a311feb",
    "metadata": {},
    "outputs": [],
@@ -37,14 +37,13 @@
     "def nothing(x):\n",
     "    pass\n",
     "\n",
-    "# img = np.zeros((300, 512, 3), np.uint8)\n",
     "img = cv2.imread('messi5.jpg', 1)\n",
     "cv2.namedWindow('image')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "7343f4dd",
    "metadata": {},
    "outputs": [],
@@ -55,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "f36256a6",
+   "execution_count": 4,
+   "id": "cc60b859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,46 +65,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "31a1bbdf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def onMouse(event, x, y, flags, param):\n",
-    "    # print(event, x, y, )\n",
     "    global ix, iy, drawing, img\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        # img = np.zeros(img, np.uint8)\n",
-    "\n",
     "        ix, iy = x, y\n",
-    "        \n",
     "        drawing = True\n",
     "        cv2.rectangle(img,(ix,iy),(x,y),(0,255,0),1)\n",
-    "        \n",
     "    elif event == cv2.EVENT_MOUSEMOVE:\n",
     "        # img = np.zeros((512,512,3), np.uint8)\n",
     "        if drawing == True:\n",
     "            img = cv2.imread('messi5.jpg', 1)\n",
-    "            \n",
     "            cv2.rectangle(img,(ix,iy),(x,y),(0,255,0),3)\n",
-    "    # img = np.zeros((512,512,3), np.uint8)\n",
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
     "        end = x, y\n",
     "        cv2.rectangle(img, (ix, iy), (x, y), (0, 0, 255), -1)\n",
     "        drawing = False        \n",
-    "        cv2.putText(img, str([\"Mouse:\", (ix, iy), end]), (0, 40), font, 1, (255, 255, 255), 1)\n",
-    "        \n",
-    "        \n",
-    "    # return mouse_point1, mouse_point2\n",
-    "    # message = cv2.putText(img, str([\"Mouse:\",mouse_point]), (0, 40), font, 1, (255, 255, 255), 1)\n",
-    "    # return message\n",
-    "    \n",
-    "    "
+    "        cv2.putText(img, str([\"Mouse:\", (ix, iy), end]), (0, 40), font, 1, (255, 255, 255), 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e4427e7c",
    "metadata": {
     "scrolled": true
@@ -114,41 +99,14 @@
    "source": [
     "while(1):\n",
     "    cv2.imshow('image', img)\n",
-    "    # print(x)\n",
     "    cv2.setMouseCallback('image', onMouse)\n",
     "    \n",
-    "    # print(mouse_point)\n",
     "    k = cv2.waitKey(1) & 0xFF\n",
     "    if k == 27:\n",
     "        break\n",
-    "        \n",
-    "    \n",
+    "\n",
     "cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "853a5b8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26fa6220",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a80fef2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
