--- a/OpenCV Turorial/C122.ipynb
+++ b/OpenCV Turorial/C122.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2d47ff01",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9dc8cb6a",
    "metadata": {},
    "outputs": [],
@@ -47,30 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "05d1a237",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cap= cv2.VideoCapture('vtest.avi')\n",
-    "\n",
-    "while(cap.isOpened()):\n",
-    "    ret, frame = cap.read()\n",
-    "    \n",
-    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "    \n",
-    "    cv2.imshow('frame', gray)\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break\n",
-    "        \n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "48163b5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +61,7 @@
     "while(cap.isOpened()):\n",
     "    ret, frame = cap.read()\n",
     "    if ret==True:\n",
-    "        frame = cv2.flip(frame,0)\n",
+    "        # frame = cv2.flip(frame,0)\n",
     "        \n",
     "        # write the flipped frame\n",
     "        out.write(frame)\n",
@@ -97,6 +75,40 @@
     "# Release everything if job is finished\n",
     "cap.release()\n",
     "out.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "48163b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.5.3) C:\\Users\\runneradmin\\AppData\\Local\\Temp\\pip-req-build-sn_xpupm\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-3b79aff79e7f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mret\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mgray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCOLOR_BGR2GRAY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'frame'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.5.3) C:\\Users\\runneradmin\\AppData\\Local\\Temp\\pip-req-build-sn_xpupm\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n"
+     ]
+    }
+   ],
+   "source": [
+    "cap= cv2.VideoCapture('output.avi')\n",
+    "\n",
+    "while(cap.isOpened()):\n",
+    "    ret, frame = cap.read()\n",
+    "    \n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    cv2.imshow('frame', gray)\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "        \n",
+    "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
   },
